Fixed and closed #407: unwanted horizontal scrollbar in PRE tags in IE7 no longer displayed (CSS hack).

--- a/WebApplication/Themes/Default-v2/Screen_Styles.css
+++ b/WebApplication/Themes/Default-v2/Screen_Styles.css
@@ -222,6 +222,12 @@ pre {
 	border: solid 1px #DDDDDD;
 	overflow: auto;
 }
+html>body pre {
+	/* Fix for IE7 - unwanted horizontal scrollbar */
+	overflow-x: auto;
+	overflow-y: hidden;
+	padding-bottom: expression(this.scrollWidth > this.offsetWidth ? 19 : 8);
+}
 
 table, div {
 	padding: 0px;
